# aegnn

./: .gitignore  LICENSE  README.md  _config.yml  environment.yml  index.html  pyproject.toml  requirements.txt  setup.py
_site/: feed.xml  index.html  robots.txt  sitemap.xml
_site/about/: index.html
_site/posts/: index.html
_site/typography/: index.html
aegnn/: __init__.py
aegnn/asyncronous/: __init__.py  batch_norm.py  conv.py  gcn_conv.py  linear.py  max_pool.py  spline_conv.py
aegnn/asyncronous/base/: base.py  (+5 more)
aegnn/callbacks/: __init__.py  bbox_logger.py  confusion.py  dataset_logger.py  epoch_logger.py  file_logger.py  hyper_logger.py
aegnn/datasets/: README.md  __init__.py  base.py  cifar10.py  gen1.py  megapixel.py  ncaltech101.py  ncars.py
aegnn/filters/: __init__.py
aegnn/models/: __init__.py  detection.py  hist_cnn.py  nvs.py  nvsd.py  recognition.py  rnvs.py
aegnn/transforms/: __init__.py  fsf.py  nvst.py
aegnn/utility/: __init__.py  io.py
aegnn/utils/: __init__.py  bounding_box.py  io.py  multiprocessing.py  oct_tree.pyx  tensors.py
aegnn/visualize/: __init__.py  batch.py  data.py  dataset.py  training.py
evaluation/: accuracy_per_events.py  flops.py  map_search.py
evaluation/baselines/: __init__.py  flops_conv_asygnn.txt  flops_conv_standard.txt
evaluation/red_model/: conv_lstm.py  evaluate.py  model.py
evaluation/visualize/: k_hop_graphs.py
scripts/: preprocessing.py  train.py
scripts/arguments/: __init__.py
scripts/io/: concat_datasets.py  ds_from_stream.py  split_dataset.py
tests/: map.py  max_pool.py  utils.py
(+57 files in other folders)
