[tool.poetry]
name = "aegnn"
version = "0.1.0"
description = ""
authors = ["simon-schaefer <simon.k.schaefer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pytest = "^6.2.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
